# api-de-chat-com-agente-de-ia

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
api/routers/: math.py
api/schemas/: math_message.py
application/: agent_service.py  math_tool.py
domain/: math_service.py
infrastructure/: llm_ollama.py  settings.py
tests/: test_agent_service.py  test_math_service.py  test_math_tool.py
